# bedrock-agentcore-infra-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: PRE_COMMIT.md  copilot-instructions.md
.github/workflows/: ci.yml
agents/global-tools/check_warranty/: lambda_function.py
agents/warranty-docs/tools/: product_tools.py
docs/diagrams/: frontend-gateway.mmd  frontend.mmd  infra-overview.mmd
docs/validation/: README.md
infrastructure/terraform/: versions.tf
infrastructure/terraform/custom-resources/: conftest.py
infrastructure/terraform/envs/dev/: README.md  main.tf
infrastructure/terraform/envs/prod/: main.tf  variables.tf
infrastructure/terraform/envs/staging/: main.tf  variables.tf
infrastructure/terraform/modules/frontend-gateway/: main.tf  variables.tf
infrastructure/terraform/modules/gateway/: main.tf  outputs.tf
infrastructure/terraform/modules/identity/: main.tf
infrastructure/terraform/modules/knowledge/: main.tf  variables.tf
infrastructure/terraform/modules/memory/: main.tf  variables.tf
infrastructure/terraform/modules/observability/: main.tf
infrastructure/terraform/modules/runtime/: main.tf
infrastructure/terraform/modules/tools/: main.tf
scripts/local/: analyze-governance-gaps.sh  governance-end-to-end.sh  governance_end_to_end.py  smoke-test.sh
security/: tool-classification.yaml
services/frontend-gateway/: auth.py  lambda_function.py  requirements.txt
services/frontend_streamlit/: config.py  main.py  runtime_client.py
specs/001-security-role-audit/: artifact-checklist.md  data-model.md  plan.md  quickstart.md  research.md  runbook.md  spec.md  tasks.md
specs/001-security-role-audit/checklists/: requirements.md
specs/001-security-role-audit/contracts/: openapi.yaml
tests/e2e/: test_authentication_flow.py  test_streamlit_app.py
tests/integration/governance/: __init__.py  test_abac_matrix.py  test_authorization_endpoints.py  test_catalog_endpoint.py  test_catalog_flags.py  test_conformance_threshold.py  test_decisions_analyzer_evidence.py  test_evidence_pack.py  test_evidence_pack_perf.py  test_full_trace_reconstruction.py  test_integration_denial.py  test_integration_expiry.py  test_integrations_endpoints.py  test_integrity_detection.py  test_revocation_audit.py  test_revocation_endpoints.py  test_revocation_sla.py  test_tool_deny_flow.py
tests/unit/frontend/: test_oauth_state.py
tests/unit/governance/: __init__.py  test_analyzer_placeholder.py  test_analyzer_scoring.py  test_catalog_aggregation.py  test_catalog_placeholder.py  test_classification_loader.py  test_correlation.py  test_integrity.py
tests/unit/services/frontend_gateway/: test_lambda_function.py
(+4 files in other folders)
